--- a/PresentationLayer/MasterPage.master
+++ b/PresentationLayer/MasterPage.master
@@ -377,7 +377,7 @@
     var ddsmoothmenu = {
 
         //Specify full URL to down and right arrow images (23 is padding-right added to top level LIs with drop downs):
-        arrowimages: { down: ['downarrowclass', 'http://swp.thesmartschools.edu.pk/images/down.gif', 23], right: ['rightarrowclass', 'http://swp.thesmartschools.edu.pk/images/right.gif'] },
+        arrowimages: { down: ['downarrowclass', 'http://www.tcsaims.com/images/down.gif', 23], right: ['rightarrowclass', 'http://www.tcsaims.com/images/right.gif'] },
         transition: { overtime: 300, outtime: 300 }, //duration of slide in/ out animation, in milliseconds
         shadow: { enable: true, offsetx: 5, offsety: 5 }, //enable shadow?
         showhidedelay: { showdelay: 100, hidedelay: 200 }, //set delay in milliseconds before sub menus appear and disappear, respectively
