--- a/PresentationLayer/MasterPage.master
+++ b/PresentationLayer/MasterPage.master
@@ -14,13 +14,11 @@
         runat="server" />
     <link runat="server" id="link2" href="https://cdn.datatables.net/tabletools/2.2.4/css/dataTables.tableTools.min.css"
         rel="stylesheet" type="text/css" />
-
     <!--new file-->
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.1/css/jquery.dataTables.min.css"/>
-      <link runat="server" id="link7" href="https://cdn.datatables.net/buttons/2.0.0/css/buttons.dataTables.min.css" rel="stylesheet" type="text/css" />
-    
-    <!--new file-->
-
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.1/css/jquery.dataTables.min.css"/>
+<link runat="server" id="link7" href="https://cdn.datatables.net/buttons/2.0.0/css/buttons.dataTables.min.css" rel="stylesheet" type="text/css" />
+<!--new file-->
+<link href="Component_Marks/assets/vendor/select2/css/select2.css" rel="Stylesheet" />
     <link id="Link4" rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.min.css"
         runat="server" />
     <link id="Link5" rel="stylesheet" runat="server" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
@@ -113,7 +111,7 @@
                                                 <td width="94%" valign="top" bgcolor="#0C4DA2">
                                                     <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                                         <tr style="height: 100%">
-                                                            <td width="35%" bgcolor="#0C4DA2" style="color: White; font-size: 25px; font-family: Georgia, Times, serif; height: 100%; text-align: left">AIMS ++
+                                                            <td width="35%" bgcolor="#0C4DA2" style="color: White; font-size: 25px; font-family: Georgia, Times, serif; height: 100%; text-align: left">AIMS +
                                                             </td>
                                                             <td width="10%" valign="top" nowrap="nowrap" bgcolor="#0C4DA2">
                                                                 <table>
@@ -556,28 +554,145 @@
 
 </script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-
-
 <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.10/js/dataTables.bootstrap.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/tabletools/2.2.4/js/dataTables.tableTools.min.js"></script>
-
-    <!--new file-->
-
+ <script type="text/javascript" src="https://cdn.datatables.net/tabletools/2.2.4/js/dataTables.tableTools.min.js"></script>
+      <!--new file-->
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.0/js/dataTables.buttons.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.0.0/js/buttons.html5.min.js"></script>
-    <!--new file-->
+<!--new file-->
 <script src="http://cdn.rawgit.com/davidstutz/bootstrap-multiselect/master/dist/js/bootstrap-multiselect.js"
     type="text/javascript"></script>
- 
 <script type="text/javascript" src="<%=ResolveUrl("AMSScripts/js/dataTables.fixedColumns.min.js") %>"></script>
 <script type="text/javascript" src="<%=ResolveUrl("AMSScripts/plugin/datepicker/dist/zebra_datepicker.min.js") %>"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js">
 <script type="text/javascript" src="<%=ResolveUrl("AMSScripts/js/ams.js") %>"></script>
+
+
+
+    <!----------RAJA PRINT----------------->
+<script src="Component_Marks/ReportCard/jquery-ui-1.10.4.custom.js" type="text/JavaScript" language="javascript"></script>
+<script src="Component_Marks/ReportCard/jquery.PrintArea.js" type="text/JavaScript" language="javascript"></script>
+
+
+<link type="text/css" rel="stylesheet" href="Component_Marks/ReportCard/Raja_iep_report.css" /><!--PrintArea3 Raja IEP Report-->
+
+<link type="text/css" rel="stylesheet" href="Component_Marks/ReportCard/media_all.css" media="all" /> <!-- Y : rel is stylesheet and media is in [all,print,empty,undefined] -->
+<link type="text/css" rel="" href="Component_Marks/ReportCard/empty.css" /> <!-- N : rel is not stylesheet -->
+<link type="text/css" rel="noPrint" href="Component_Marks/ReportCard/noPrint.css" /> <!-- N : rel is not stylesheet -->
+<link type="text/css" rel="stylesheet" href="Component_Marks/ReportCard/media_none.css" media="xyz" /> <!-- N : media not in [all,print,empty,undefined] -->
+<link type="text/css" href="Component_Marks/ReportCard/no_rel.css" media="print" /> <!-- N : no rel attribute -->
+<link type="text/css" href="Component_Marks/ReportCard/no_rel_no_media.css" /> <!-- N : no rel, no media attributes -->
+<script src="Component_Marks/assets/vendor/select2/js/select2.js" type="text/javascript"     language="javascript"></script>
+<script>
+
+
+
+    $('[data-toggle="tooltip"]').tooltip();
+    var dialog = $("div.testDialog").dialog({ position: { my: "left top", at: "left bottom+50", of: ".SettingsBox" }, width: "1000", title: "Print Dialog Box Contents" });
+
+
+
+    $(".toggleDialog").click(function () {
+        dialog.dialog("open");
+    });
+
+
+
+    $("div.b1").click(function () {
+
+
+
+        var mode = $("input[name='mode']:checked").val();
+        var close = mode == "popup" && $("input#closePop").is(":checked");
+        var extraCss = $("input[name='extraCss']").val();
+
+
+
+        var print = "";
+        $("input.selPA:checked").each(function () {
+            print += (print.length > 0 ? "," : "") + "div.PrintArea." + $(this).val();
+        });
+
+
+
+        var keepAttr = [];
+        $(".chkAttr").each(function () {
+            if ($(this).is(":checked") == false)
+                return;
+
+
+
+            keepAttr.push($(this).val());
+        });
+
+
+
+        var headElements = $("input#addElements").is(":checked") ? '<meta charset="utf-8" />,<meta http-equiv="X-UA-Compatible" content="IE=edge"/>' : '';
+
+
+
+        var options = { mode: mode, popClose: close, extraCss: extraCss, retainAttr: keepAttr, extraHead: headElements };
+
+
+
+        $(print).printArea(options);
+
+
+
+
+
+
+    });
+/***change by raja 29march2022****/
+  function printr(item) {
+            var mode = $("input[name='mode']:checked").val();
+            var close = mode == "popup" && $("input#closePop").is(":checked");
+            var extraCss = $("input[name='extraCss']").val();
+
+            var print = "";
+            $("input.selPA:checked").each(function () {
+                print += (print.length > 0 ? "," : "") + "div.PrintArea." + $(this).val();
+            });
+
+            var keepAttr = [];
+            $(".chkAttr").each(function () {
+                if ($(this).is(":checked") == false)
+                    return;
+                keepAttr.push($(item).val());
+            });
+
+            var headElements = $("input#addElements").is(":checked") ? '<meta charset="utf-8" />,<meta http-equiv="X-UA-Compatible" content="IE=edge"/>' : '';
+
+            var options = { mode: mode, popClose: close, extraCss: extraCss, retainAttr: keepAttr, extraHead: headElements };
+
+            $(print).printArea(options);
+        }
+/***change by raja 29march2022****/
+    $('.onlyalphabetallow').bind('keyup blur', function () {
+        var node = $(this);
+        node.val(node.val().replace(/[^a-z,A-Z]/g, ''));
+    });
+    $('.onlynumberallow').bind('keyup blur', function () {
+        var node = $(this);
+        node.val(node.val().replace(/[^0-9]/g, ''));
+    });
+
+</script>
+
+    <!------------------------------------------------Raja Report change by raja 29march2022------------------------------->
+     <script>
+         var centerIep = '<%= Session["cId"] %>';
+         var ssid_Iep = '<%= Session["Session_Id"] %>';
+         var teacherid_Iep = '<%= Session["EmployeeCode"] %> ';
+     </script>
+      <script src="Component_Marks/Content/sweetalert2.min.js"></script>
+        <script src="Component_Marks/ReportCard/IEPReport.js" type="text/JavaScript" language="javascript"></script>
+    <!------------------------------------------------Raja Report by raja 29march2022------------------------------->
+
+ <!----------RAJA PRINT----------------->
 
 <script type="text/javascript">
     function toasterOptions() {
@@ -620,7 +735,6 @@
         else { toastr.success(message); }
 
     }
-
 function CallToastrnew(message, autoHide, messageType) {
         var toastrType;
         switch (messageType) {
@@ -648,128 +762,11 @@ function CallToastrnew(message, autoHide, messageType) {
  
         toastr[toastrType](message);
     }
-
-          
-    
-
-</script>
-<%--      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="printThis.js"></script>
-    <script> 
-    //$('#basic').on("click", function () {
-            $('#basic').click(function () {
-                $('.demo').printThis({
-                    base: "https://jasonday.github.io/printThis/"
-                });
-            });
-    </script>--%>
-
-<%--     <script src="Component_Marks/ReportCard/jquery-3.3.1.min.js" type="text/JavaScript" language="javascript"></script>--%>
-    
-    <!------------------------------------------------SALMAN REPORT ------------------------------------------------>
-  <script src="Component_Marks/ReportCard/jquery-ui-1.10.4.custom.js" type="text/JavaScript" language="javascript"></script>
-    <script src="Component_Marks/ReportCard/jquery.PrintArea.js" type="text/JavaScript" language="javascript"></script>
-
-    <link type="text/css" rel="stylesheet" href="Component_Marks/ReportCard/css/ui-lightness/jquery-ui-1.10.4.custom.css" />
-
-    <link type="text/css" rel="stylesheet" href="Component_Marks/ReportCard/SalmanReport.css" /><!--PrintArea3 SalmanReport-->
-   <link type="text/css" rel="stylesheet" href="Component_Marks/ReportCard/Raja_iep_report.css" /><!--PrintArea3 Raja IEP Report-->
-        <link type="text/css" rel="stylesheet" href="Component_Marks/ReportCard/media_all.css" media="all" />   <!-- Y : rel is stylesheet and media is in [all,print,empty,undefined] -->
-    <link type="text/css" rel="" href="Component_Marks/ReportCard/empty.css" />                    <!-- N : rel is not stylesheet -->
-    <link type="text/css" rel="noPrint" href="Component_Marks/ReportCard/noPrint.css" />                  <!-- N : rel is not stylesheet -->
-    <link type="text/css" rel="stylesheet" href="Component_Marks/ReportCard/media_none.css" media="xyz" />   <!-- N : media not in [all,print,empty,undefined] -->
-    <link type="text/css" href="Component_Marks/ReportCard/no_rel.css" media="print" /> <!-- N : no rel attribute -->
-    <link type="text/css" href="Component_Marks/ReportCard/no_rel_no_media.css" /> <!-- N : no rel, no media attributes -->
-  <link href="Component_Marks/Content/sweetalert2.min.css" rel="stylesheet" />
-    
-    <script>
-
-        $('[data-toggle="tooltip"]').tooltip();
-        var dialog = $("div.testDialog").dialog({ position: { my: "left top", at: "left bottom+50", of: ".SettingsBox" }, width: "1000", title: "Print Dialog Box Contents" });
-
-        $(".toggleDialog").click(function () {
-            dialog.dialog("open");
-        });
-
-        $("div.b1").click(function () {
-
-            var mode = $("input[name='mode']:checked").val();
-            var close = mode == "popup" && $("input#closePop").is(":checked");
-            var extraCss = $("input[name='extraCss']").val();
-
-            var print = "";
-            $("input.selPA:checked").each(function () {
-                print += (print.length > 0 ? "," : "") + "div.PrintArea." + $(this).val();
-            });
-
-            var keepAttr = [];
-            $(".chkAttr").each(function () {
-                if ($(this).is(":checked") == false)
-                    return;
-
-                keepAttr.push($(this).val());
-            });
-
-            var headElements = $("input#addElements").is(":checked") ? '<meta charset="utf-8" />,<meta http-equiv="X-UA-Compatible" content="IE=edge"/>' : '';
-
-            var options = { mode: mode, popClose: close, extraCss: extraCss, retainAttr: keepAttr, extraHead: headElements };
-
-            $(print).printArea(options);
-
-
-
-
-        });
-
-function printr(item) {
-            var mode = $("input[name='mode']:checked").val();
-            var close = mode == "popup" && $("input#closePop").is(":checked");
-            var extraCss = $("input[name='extraCss']").val();
-
-            var print = "";
-            $("input.selPA:checked").each(function () {
-                print += (print.length > 0 ? "," : "") + "div.PrintArea." + $(this).val();
-            });
-
-            var keepAttr = [];
-            $(".chkAttr").each(function () {
-                if ($(this).is(":checked") == false)
-                    return;
-                keepAttr.push($(item).val());
-            });
-
-            var headElements = $("input#addElements").is(":checked") ? '<meta charset="utf-8" />,<meta http-equiv="X-UA-Compatible" content="IE=edge"/>' : '';
-
-            var options = { mode: mode, popClose: close, extraCss: extraCss, retainAttr: keepAttr, extraHead: headElements };
-
-            $(print).printArea(options);
-        }
-
-        $('.onlyalphabetallow').bind('keyup blur', function () {
-            var node = $(this);
-            node.val(node.val().replace(/[^a-z,A-Z]/g, ''));
-        });
-        $('.onlynumberallow').bind('keyup blur', function () {
-            var node = $(this);
-            node.val(node.val().replace(/[^0-9]/g, ''));
-        });
     </script>
-
-       <!------------------------------------------------SALMAN REPORT ------------------------------------------------>
-
-  <!------------------------------------------------Raja Report------------------------------->
-     <script>
-         var centerIep = '<%= Session["cId"] %>';
-         var ssid_Iep = '<%= Session["Session_Id"] %>';
-         var teacherid_Iep = '<%= Session["EmployeeCode"] %> ';
-     </script>
-      <script src="Component_Marks/Content/sweetalert2.min.js"></script>
-        <script src="Component_Marks/ReportCard/IEPReport.js" type="text/JavaScript" language="javascript"></script>
-    <!------------------------------------------------Raja Report------------------------------->
 <script type="text/javascript">
     var jq = $;//.noConflict(); 
 </script>
-    <style>
+        <style>
         /***EXCEL BUTTON*/
 
 .dt-buttons {
@@ -789,7 +786,8 @@ function printr(item) {
     }
 
 /***EXCEL BUTTON*/
-/***RAJA IEP*/
+
+/***RAJA IEP change by raja 29march2022*/
 .overlay {
     background: url('Component_Marks/Content/logo2.gif') no-repeat center center;
     position: absolute;
@@ -828,7 +826,7 @@ function printr(item) {
         .teacherfeedbacktable {
     overflow: scroll !important;
 }
-/**RAJA IEP*/
-    </style>
+/**RAJA IEP  change by raja 29march2022*/
 
+    </style>
 </html>
